--- a/app.ui
+++ b/app.ui
@@ -167,5 +167,42 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>btnPlayer1</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>btn_player1_clicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>264</x>
+     <y>47</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>260</x>
+     <y>69</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnPlayer2</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>btn_player2_clicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1039</x>
+     <y>48</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1045</x>
+     <y>68</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>btn_player1_clicked()</slot>
+  <slot>btn_player2_clicked()</slot>
+ </slots>
 </ui>
