--- a/app.ui
+++ b/app.ui
@@ -47,6 +47,11 @@
      </item>
      <item row="2" column="2">
       <widget class="QLabel" name="lblPlayer2status">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -92,6 +97,11 @@
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="lblPlayer1status">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -121,6 +131,11 @@
      </item>
      <item row="2" column="1">
       <widget class="QLabel" name="lblGameStatus">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string/>
        </property>
