--- a/app.ui
+++ b/app.ui
@@ -33,6 +33,9 @@
      </item>
      <item row="3" column="2">
       <widget class="QLabel" name="lblPlayer2">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgba(255, 128, 128,128);</string>
+       </property>
        <property name="text">
         <string>TextLabel</string>
        </property>
@@ -40,13 +43,16 @@
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="lblPlayer1">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgba(128, 128, 255, 128);</string>
+       </property>
        <property name="text">
         <string>TextLabel</string>
        </property>
       </widget>
      </item>
      <item row="2" column="2">
-      <widget class="QLabel" name="lblPlayer2status">
+      <widget class="QLabel" name="lblPlayer2Status">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
@@ -74,6 +80,9 @@
          <height>0</height>
         </size>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgba(255, 128, 128, 128);</string>
+       </property>
        <property name="text">
         <string>Player 2</string>
        </property>
@@ -96,7 +105,7 @@
       </widget>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="lblPlayer1status">
+      <widget class="QLabel" name="lblPlayer1Status">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
@@ -123,6 +132,9 @@
          <width>0</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgba(128, 128, 255, 128);</string>
        </property>
        <property name="text">
         <string>Player 1</string>
